switched to SVG

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body bgcolor="#EEE">
   <center>
     <p class=top_spaced>
-      <img src="https://github.com/syshackorg/syshackorg.github.io/raw/master/img/syshack.png" width="50%"/>
+      <img src="https://github.com/syshackorg/syshackorg.github.io/raw/master/img/syshack.svg" width="50%"/>
     </p>
     <p class=mono>
       This page is best viewed underwater.
