--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
   <meta charset="UTF-8">
   <style>
    .top_spaced {
-     margin-top: 10%;
+     margin-top: 5%;
    }
-   .mono {
+   .bright {
+    color: #444;
+   }
+   .mono_small {
      font-family: monospace;
      font-size: 1.6vmax;
+     color: #666;
+   }
+   .mono_big {
+     font-family: monospace;
+     font-size: 3vmax;
+     color: #666;
    }
    .bot_spaced {
     margin-bottom: 1%;
@@ -16,20 +25,28 @@
     text-align: right;
   }
 </style>
-<title>sys hack</title>
+<title>sys hack org</title>
 </head>
 <body bgcolor="#EEE">
   <center>
     <p class=top_spaced>
+      <p class=mono_big>
+        <span class=bright>S</span>ystem
+        <span class=bright>H</span>ackers
+        <span class=bright>U</span>nite
+        <span class=bright>T</span>o
+        <span class=bright>U</span>proot
+        <span class=bright>P</span>erplexity 
+      </p>
       <img src="https://github.com/syshackorg/syshackorg.github.io/raw/master/img/syshack.svg" width="50%"/>
     </p>
-    <p class=mono>
+    <p class=mono_small>
       This page is best viewed underwater.
     </p>
-    <p class=mono>
+    <p class=mono_small>
       Ideal viewing depth is 23 m,<br/>adjusted for temperature and salinity.
     </p>
-    <p class=mono>
+    <p class=mono_small>
       If you're still having problems,<br/>please contact us via carrier sturgeon.
     </p>
   </center>
