--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <style>
    .top_spaced {
-     margin-top: 5%;
+     margin-top: 3%;
    }
    .bright {
     color: #444;
@@ -48,6 +48,9 @@
     </p>
     <p class=mono_small>
       If you're still having problems,<br/>please contact us via carrier sturgeon.
+    </p>
+    <p>
+      <img src="https://github.com/syshackorg/syshackorg.github.io/raw/master/img/equation.svg" width="11%"/>
     </p>
   </center>
   <p class=bot_spaced>
